# verser

./: .gitignore  README.md  pyproject.toml
tests/: test_verser.py
verser/: ..verser.db  __init__.py  ingest.py  models.py  utils.py
verser/sources/: udhc.py
